<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/setting_GPS_title"
        android:key="general_settings">
        <EditTextPreference
            android:key="pref_key_interval_time"
            android:summary="@string/setting_interval_summary"
            android:title="@string/setting_interval_title"
            android:defaultValue="1"
            android:inputType="number"/>
        <EditTextPreference
            android:key="pref_key_min_distance"
            android:summary="@string/setting_min_distance_summary"
            android:title="@string/setting_min_distance_title"
            android:defaultValue="1"
            android:inputType="number"/>
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/setting_speed_title"
        android:key="general_settings">
        <EditTextPreference
            android:key="pref_key_min_speed"
            android:summary="@string/setting_min_speed_summary"
            android:title="@string/setting_min_speed_title"
            android:defaultValue="10"
            android:inputType="number"/>
        <EditTextPreference
            android:key="pref_key_max_speed"
            android:summary="@string/setting_max_speed_summary"
            android:title="@string/setting_min_max_speed_title"
            android:defaultValue="15"
            android:inputType="number"/>
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/setting_database_title"
        android:key="general_settings">
        <EditTextPreference
            android:key="pref_key_delay_backup_database"
            android:summary="@string/setting_delay_backup_database_summary"
            android:title="@string/setting_delay_backup_database_title"
            android:defaultValue="7"
            android:inputType="number"/>
        <Preference
            android:key="pref_key_remove_database"
            android:summary="@string/setting_remove_database_summary"
            android:title="@string/setting_remove_database_title" />
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/setting_passive_title"
        android:key="general_settings">
        <CheckBoxPreference
            android:key="pref_key_passive"
            android:summary="@string/setting_passive_summary"
            android:title="@string/setting_passive_title" />
    </PreferenceCategory>
</PreferenceScreen>